fix: Scrollable spacing fits body if wide enough
Dialog element detects spacing between right of scrollable to right boundary of dialog window. If wide enough, scrollablewrapper sets to float: left and lets the body content to seep through the gap.

--- a/css/custom_style.scss
+++ b/css/custom_style.scss
@@ -155,6 +155,9 @@ body {
     font-size: large;
     font-weight: 500;
 }
+.dialog-element ::-webkit-scrollbar-button {
+    width: 0;
+}
 
 .footnote {
     margin-top: 32px;
@@ -605,7 +608,7 @@ p.i {
     margin-left: 0;
 }
 .x-scrollable-item-slideshow:last-child {
-    margin-left: 0;
+    margin-right: 16px;
 }
 .x-scrollable-image {
     height: calc(5.5em + 8px);
